Use va_copy if available for VARARGS_ASSIGN Bug #187180 r=blizzard sr=brendan